fixed right side scrollbar cut off

--- a/assets/style.css
+++ b/assets/style.css
@@ -58,9 +58,10 @@ header {
 
 .content{
     padding-right: 4em;
-    padding-left: 5em;
+    padding-left: 4em;
     font-family: Tahoma;
     overflow-y: scroll;
+    margin-right: 8px;
     
     /* background: url(images/annie-spratt-Bf9PT5qVZvM-unsplash.jpg);  */
 }
